completed service setup

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prod:start": "NODE_ENV=production node --optimize_for_size --max_old_space_size=920 --gc_interval=100 ./dist/bin/www/index.js",
     "dev:start": "NODE_ENV=development npm-run-all --parallel \"dev:watch\" \"prettier:watch\" \"test:watch\"",
-    "dev:watch": "nodemon ./src/bin/www/index.ts",
+    "dev:watch": "nodemon ./src/bin/www/index.ts | bunyan",
     "build": "webpack",
     "test": "jest",
     "test:watch": "jest --watchAll --collectCoverage=false",
@@ -40,6 +40,7 @@
     "@types/cors": "2.8.10",
     "@types/express-serve-static-core": "4.17.1",
     "body-parser": "1.19.0",
+    "bunyan": "1.8.15",
     "compression": "1.7.4",
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
@@ -51,6 +52,7 @@
     "install": "0.13.0",
     "log4js": "6.1.0",
     "method-override": "3.0.0",
+    "mongoose": "5.12.14",
     "morgan": "1.9.1",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
@@ -66,6 +68,7 @@
     "@babel/preset-typescript": "^7.7.7",
     "@babel/register": "^7.7.7",
     "@types/body-parser": "1.17.1",
+    "@types/bunyan": "1.8.6",
     "@types/compression": "1.0.1",
     "@types/cookie-parser": "1.4.2",
     "@types/errorhandler": "0.0.32",
