--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "install": "0.13.0",
     "log4js": "6.1.0",
     "method-override": "3.0.0",
+    "mongoose": "5.12.15",
     "morgan": "1.9.1",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
@@ -90,7 +91,6 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "3.1.0",
     "jest": "25.4.0",
     "nodemon": "2.0.2",
     "npm-run-all": "4.1.5",
