--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/bin/www/index.ts",
   "private": false,
   "scripts": {
-    "start": "tsc && node --optimize_for_size --max_old_space_size=920 --gc_interval=100 ./dist/bin/www/index.js | bunyan",
+    "prod:start": "node --optimize_for_size --max_old_space_size=920 --gc_interval=100 ./dist/bin/www/index.js | bunyan",
     "dev:start": "npm-run-all --parallel \"dev:watch\" \"prettier:watch\" \"test:watch\"",
     "dev:watch": "nodemon ./src/bin/www/index.ts | bunyan",
     "build": "webpack",
