--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prod:start": "pm2 start ecosystem.config.js --env production",
     "dev:start": "npm-run-all --parallel \"dev:watch\" \"prettier:watch\" \"test:watch\"",
-    "dev:watch": "pm2 start ./src/bin/www/index.ts | bunyan",
+    "dev:watch": "pm2 start ecosystem.config.js",
     "build": "webpack",
     "test": "jest",
     "test:watch": "jest --watchAll --collectCoverage=false",
