--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "resolveJsonModule": true,
     "rootDir": "src",
     "outDir": "dist",
+    "watch": true,
     "lib": [
       "es2015",
       "es2017",
