--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
   "dependencies": {
     "@types/cors": "2.8.10",
     "@types/express-serve-static-core": "4.17.1",
+    "@types/jsonwebtoken": "8.5.3",
+    "bcrypt": "5.0.1",
     "body-parser": "1.19.0",
     "bunyan": "1.8.15",
     "compression": "1.7.4",
@@ -47,9 +49,11 @@
     "dotenv": "8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
+    "express-async-handler": "1.1.4",
     "express-validator": "6.4.0",
     "helmet": "3.21.2",
     "install": "0.13.0",
+    "jsonwebtoken": "8.5.1",
     "log4js": "6.1.0",
     "method-override": "3.0.0",
     "mongoose": "5.12.15",
@@ -58,7 +62,9 @@
     "mysql2": "2.1.0",
     "npm": "6.14.6",
     "pm2": "5.1.0",
-    "typeorm": "0.2.22"
+    "typeorm": "0.2.22",
+    "uuid": "8.3.2",
+    "uuidv4": "6.2.10"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -68,8 +74,9 @@
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-typescript": "^7.7.7",
     "@babel/register": "^7.7.7",
+    "@types/bcrypt": "5.0.0",
     "@types/body-parser": "1.17.1",
-    "@types/bunyan": "1.8.6", 
+    "@types/bunyan": "1.8.6",
     "@types/compression": "1.0.1",
     "@types/cookie-parser": "1.4.2",
     "@types/errorhandler": "0.0.32",
