--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "method-override": "3.0.0",
     "mongoose": "5.12.15",
     "morgan": "1.9.1",
+    "multer": "1.4.2",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
     "npm": "6.14.6",
@@ -85,6 +86,7 @@
     "@types/jest": "24.0.25",
     "@types/method-override": "0.0.31",
     "@types/morgan": "1.7.37",
+    "@types/multer": "1.4.7",
     "@types/mysql": "2.15.18",
     "@types/node": "13.1.1",
     "@types/sinon": "7.5.1",
