--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "multer": "1.4.2",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
+    "nodemailer": "6.6.2",
+    "nodemailer-smtp-transport": "2.7.4",
     "npm": "6.14.6",
     "pm2": "5.1.0",
     "typeorm": "0.2.22",
@@ -89,6 +91,8 @@
     "@types/multer": "1.4.7",
     "@types/mysql": "2.15.18",
     "@types/node": "13.1.1",
+    "@types/nodemailer": "6.4.4",
+    "@types/nodemailer-smtp-transport": "2.7.5",
     "@types/sinon": "7.5.1",
     "@types/sinon-express-mock": "1.3.7",
     "@types/supertest": "2.0.8",
