--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "multer": "1.4.2",
     "mysql": "2.18.1",
     "mysql2": "2.1.0",
+    "nodejs-nodemailer-outlook": "1.2.4",
     "nodemailer": "6.6.2",
     "nodemailer-smtp-transport": "2.7.4",
     "npm": "6.14.6",
