--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
+    "email-templates": "8.0.7",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-async-handler": "1.1.4",
     "express-validator": "6.4.0",
+    "handlebars": "4.7.7",
     "helmet": "3.21.2",
     "install": "0.13.0",
     "jsonwebtoken": "8.5.1",
@@ -66,6 +68,7 @@
     "nodemailer-smtp-transport": "2.7.4",
     "npm": "6.14.6",
     "pm2": "5.1.0",
+    "pug": "3.0.2",
     "typeorm": "0.2.22",
     "uuid": "8.3.2",
     "uuidv4": "6.2.10"
@@ -83,6 +86,7 @@
     "@types/bunyan": "1.8.6",
     "@types/compression": "1.0.1",
     "@types/cookie-parser": "1.4.2",
+    "@types/email-templates": "8.0.4",
     "@types/errorhandler": "0.0.32",
     "@types/express": "4.17.2",
     "@types/helmet": "0.0.45",
